--- a/firstpage.html
+++ b/firstpage.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: 班鲁杰
  * @Date: 2020-02-21 09:22:27
- * @LastEditTime: 2020-02-21 09:41:53
+ * @LastEditTime: 2020-02-27 10:43:51
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \homework\firstpage.html
@@ -30,7 +30,7 @@
         @keyframes round {
             0% {
                 transform: rotate(0deg);
-                background-color: #f00;
+                background-color: red;
             }
 
             100% {
@@ -49,9 +49,8 @@
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background: 
-            url(https://www.nwafu.edu.cn/images/2019-12/6c917099d7714cafa54c3172732e3983.jpg)
-                49% 32%;
+            background:
+                url(https://www.nwafu.edu.cn/images/2019-12/6c917099d7714cafa54c3172732e3983.jpg) 49% 32%;
         }
     </style>
 
@@ -65,9 +64,9 @@
         <![endif]-->
 
     <script src="" async defer></script>
-        <div class="pic"></div>
-        <h1>西北农林科技大学</h1>
-        <div class="box"></div>
+    <div class="pic"></div>
+    <h1>西北农林科技大学&nbsp;</h1>
+    <div class="box"></div>
 </body>
 
 </html>
